Add xpath select tag to app/views/field_path_mappings/_form.html.slim

--- a/app/views/field_path_mappings/_form.html.slim
+++ b/app/views/field_path_mappings/_form.html.slim
@@ -1,31 +1,33 @@
 = simple_form_for(@field_path_mapping) do |f|
   = f.error_notification
 
+  - option_array = @field_path_mapping.feed_source.xpaths.map { |xpath| xpath.gsub("[]", "") }
   .form-inputs
-    = f.input :location_address_1
-    = f.input :location_address_2
-    = f.input :location_city
-    = f.input :location_state
-    = f.input :location_zip
-    = f.input :location_latiitude
-    = f.input :location_longitude
-    = f.input :marketing_name
-    = f.input :contact_phone
-    = f.input :contact_email
-    = f.input :website
-    = f.input :description
-    = f.input :floorplan_name
-    = f.input :floorplan_square_feed
-    = f.input :floorplan_market_rent
-    = f.input :floorplan_effective_rent
-    = f.input :floorplan_bedroops
-    = f.input :floorplan_bathrooms
-    = f.input :floorplan_availability
-    = f.input :file_floorplan
-    = f.input :file_property
-    = f.input :amenities_community
-    = f.input :amenities_floorplan
-    = f.input :pet_dog
-    = f.input :pet_cat
+    -# https://github.com/plataformatec/simple_form#collections
+    = f.input :location_address_1, collection: option_array
+    = f.input :location_address_2, collection: option_array
+    = f.input :location_city, collection: option_array
+    = f.input :location_state, collection: option_array
+    = f.input :location_zip, collection: option_array
+    = f.input :location_latiitude, collection: option_array
+    = f.input :location_longitude, collection: option_array
+    = f.input :marketing_name, collection: option_array
+    = f.input :contact_phone, collection: option_array
+    = f.input :contact_email, collection: option_array
+    = f.input :website, collection: option_array
+    = f.input :description, collection: option_array
+    = f.input :floorplan_name, collection: option_array
+    = f.input :floorplan_square_feed, collection: option_array
+    = f.input :floorplan_market_rent, collection: option_array
+    = f.input :floorplan_effective_rent, collection: option_array
+    = f.input :floorplan_bedroops, collection: option_array
+    = f.input :floorplan_bathrooms, collection: option_array
+    = f.input :floorplan_availability, collection: option_array
+    = f.input :file_floorplan, collection: option_array
+    = f.input :file_property, collection: option_array
+    = f.input :amenities_community, collection: option_array
+    = f.input :amenities_floorplan, collection: option_array
+    = f.input :pet_dog, collection: option_array
+    = f.input :pet_cat, collection: option_array
   .form-actions
     = f.button :submit
