--- a/app/views/layouts/_site_header.html.slim
+++ b/app/views/layouts/_site_header.html.slim
@@ -19,7 +19,7 @@
         role="dialog" 
         tabindex="-1"
       ]
-        = render "signup_modal"
+        = render "shared/signup_modal"
       
       a.nav-item.pull-right[
         data-target="#login_modal__target" 
@@ -32,4 +32,4 @@
         role="dialog" 
         tabindex="-1"
       ]
-        = render "login_modal"
+        = render "shared/login_modal"
