--- a/app/views/devise/registrations/create.js.erb
+++ b/app/views/devise/registrations/create.js.erb
@@ -3,8 +3,8 @@
 
 <% if resource.errors.present? %>
   // After unsuccessful signup, re-render the form with error messages.
-  $('#signup_modal__target').html(
-    '<%= j(render "static_pages/signup_modal") %>'
+  $('#signup_modal').html(
+    '<%= j(render "shared/signup_modal") %>'
   );
 <% else %>
   // Set a message.
