--- a/app/views/feed_sources/show.html.slim
+++ b/app/views/feed_sources/show.html.slim
@@ -1,11 +1,11 @@
-= provide(:title, @feed_source.url)
+= provide(:title, "Xpaths for #{@feed_source.url}")
 
 h1.page-header 
   | Feed source
   .h4.text-muted
     = @feed_source.url
-    
+
+= render "tabs"
+
 pre
   = @feed_source.xpaths.join("\n")
-
-= link_to 'Back', feed_sources_path
