--- a/app/views/field_path_mappings/edit.html.slim
+++ b/app/views/field_path_mappings/edit.html.slim
@@ -1,12 +1,8 @@
 = provide(:title, @field_path_mapping.class.name.titleize)
 
-h1.page-header 
-  = @field_path_mapping.class.name.titleize
+= render "page_header"
 
-  .h4
-    | Source url: 
-    span.text-muted
-      = @field_path_mapping.feed_source.url
-    span.pull-right
-      = link_to 'Finish editing', @field_path_mapping
+.pull-right
+  = link_to 'Finish editing', @field_path_mapping
+= render "tabs"
 = render 'form'
