--- a/app/views/feed_sources/index.html.slim
+++ b/app/views/feed_sources/index.html.slim
@@ -9,9 +9,11 @@ table.table.table-bordered
       th Source URL
       th 
       th 
+      th 
   tbody
     - @feed_sources.each do |feed_source|
       tr
-        td = feed_source.url
-        td = link_to 'Xpaths', feed_source
-        td = link_to 'Field-path mapping', feed_source.field_path_mapping
+        td= feed_source.url
+        td= link_to 'Xpaths', feed_source
+        td= link_to 'Field-path mapping', feed_source.field_path_mapping
+        td= link_to 'CSV', feed_source_path(feed_source, format: "csv")
