--- a/app/views/feed_sources/index.html.slim
+++ b/app/views/feed_sources/index.html.slim
@@ -7,6 +7,7 @@ table.table.table-bordered
   thead
     tr
       th Source URL
+      th Updated at
       th 
       th 
       th 
@@ -14,6 +15,7 @@ table.table.table-bordered
     - @feed_sources.each do |feed_source|
       tr
         td= feed_source.url
+        td= feed_source.updated_at
         td= link_to 'Xpaths', feed_source
         td= link_to 'Field-path mapping', feed_source.field_path_mapping
         td= link_to 'CSV', feed_source_path(feed_source, format: "csv")
