Add save_field_path_mappings_to_yaml task

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -11,7 +11,7 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     border-radius: 0;
-    width: 100%;
+    width: auto;
     margin-bottom: 1rem;
 }
 
