Add rake db:convert_feeds_to_properties task

--- a/app/views/field_path_mappings/_form.html.slim
+++ b/app/views/field_path_mappings/_form.html.slim
@@ -12,7 +12,7 @@
     = field_path_mapping_select_tag(f, :location_city) 
     = field_path_mapping_select_tag(f, :location_state) 
     = field_path_mapping_select_tag(f, :location_zip) 
-    = field_path_mapping_select_tag(f, :location_latiitude) 
+    = field_path_mapping_select_tag(f, :location_latitude) 
     = field_path_mapping_select_tag(f, :location_longitude) 
     = field_path_mapping_select_tag(f, :floorplan_name) 
     = field_path_mapping_select_tag(f, :floorplan_square_feet) 
