--- a/app/views/layouts/_site_header.html.slim
+++ b/app/views/layouts/_site_header.html.slim
@@ -11,6 +11,8 @@
     - else
       a.nav-item.pull-left[href="#{feed_sources_path}"] 
         | All feed sources
+      a.nav-item.pull-left[href="#{properties_path}"] 
+        | All properties
       
       a.nav-item.pull-right[
         data-target="#signup_modal" 
