--- a/app/views/properties/show.html.slim
+++ b/app/views/properties/show.html.slim
@@ -30,27 +30,27 @@ p.text-muted
       tdtr
         td 
           strong Location street:
-        td= @property.location_street
+        td= @property.street
       tr
         td 
           strong Location city:
-        td= @property.location_city
+        td= @property.city
       tr
         td 
           strong Location state:
-        td= @property.location_state
+        td= @property.state
       tr
         td 
           strong Location zip:
-        td= @property.location_zip
+        td= @property.zip
       tr
         td 
           strong Location latitude:
-        td= @property.location_latitude
+        td= @property.latitude
       tr
         td 
           strong Location longitude:
-        td= @property.location_longitude
+        td= @property.longitude
       tr
         td 
           strong Pet dog:
