Fix for wrong attribute names in a form and scrolling

--- a/app/views/field_path_mappings/_form.html.slim
+++ b/app/views/field_path_mappings/_form.html.slim
@@ -7,12 +7,12 @@
     = field_path_mapping_select_tag(f, :website) 
     = field_path_mapping_select_tag(f, :contact_phone) 
     = field_path_mapping_select_tag(f, :contact_email) 
-    = field_path_mapping_select_tag(f, :location_street) 
-    = field_path_mapping_select_tag(f, :location_city) 
-    = field_path_mapping_select_tag(f, :location_state) 
-    = field_path_mapping_select_tag(f, :location_zip) 
-    = field_path_mapping_select_tag(f, :location_latitude) 
-    = field_path_mapping_select_tag(f, :location_longitude) 
+    = field_path_mapping_select_tag(f, :street) 
+    = field_path_mapping_select_tag(f, :city) 
+    = field_path_mapping_select_tag(f, :state) 
+    = field_path_mapping_select_tag(f, :zip) 
+    = field_path_mapping_select_tag(f, :latitude) 
+    = field_path_mapping_select_tag(f, :longitude) 
     = field_path_mapping_select_tag(f, :floorplan_name) 
     = field_path_mapping_select_tag(f, :floorplan_square_feet) 
     = field_path_mapping_select_tag(f, :floorplan_market_rent) 
