--- a/app/views/field_path_mappings/edit.html.slim
+++ b/app/views/field_path_mappings/edit.html.slim
@@ -10,5 +10,7 @@
 javascript:
   // Restore the scroll position before form submission.
   $(document).on('turbolinks:load', function() {
-      $('body').scrollTop("#{@scroll}", 0);
+      if (location.pathname === '/field_path_mappings/1/edit') {
+          $('body').scrollTop("#{@scroll}", 0);
+      }
   })
