Remove join tables for amenities and import amenity json

--- a/app/views/field_path_mappings/edit.html.slim
+++ b/app/views/field_path_mappings/edit.html.slim
@@ -10,6 +10,8 @@
 javascript:
   // Restore the scroll position before form submission.
   $(document).on('turbolinks:load', function() {
+  
+      // Make sure that we apply this effect only for this page.
       if (location.pathname === '/field_path_mappings/1/edit') {
           $('body').scrollTop("#{@scroll}", 0);
       }
